[package]
name = "raytracing-two"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
chrono = "0.4.23"
num_cpus = "1.0"
rayon = "1.6.1"
rand = "0.8.5"

[dependencies.sdl2]
version = "0.35.0"

[build-dependencies]
fs_extra = "1.3.0"
